--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "1.0.0",
   "type": "module",
   "author": {
-    "name": "baimingxuan",
-    "email": "354372738@qq.com",
-    "url": "https://github.com/baimingxuan"
+    "name": "ctk41",
+    "email": "ctk41sphn@gmail.com"
   },
   "scripts": {
-    "serve": "vite",
+    "dev": "vite",
     "build": "rimraf dist && tsc && vite build",
     "preview": "vite preview",
     "clean:cache": "rimraf .eslintcache && rimraf node_modules && pnpm install",
@@ -53,6 +52,7 @@
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "sortablejs": "^1.15.0",
+    "styled-components": "^6.1.13",
     "use-immer": "^0.9.0",
     "video.js": "^8.6.1",
     "xlsx": "^0.18.5"
@@ -71,6 +71,7 @@
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@types/sortablejs": "^1.15.5",
+    "@types/styled-components": "^5.1.34",
     "@types/video-react": "^0.15.4",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
@@ -113,7 +114,6 @@
     "react-admin-design"
   ],
   "license": "MIT",
-  "homepage": "https://github.com/baimingxuan/react-admin-design",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/baimingxuan/react-admin-design.git"
