--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-router-dom": "^6.21.1",
     "react-sortablejs": "^6.1.4",
     "redux": "^4.2.1",
+    "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "sortablejs": "^1.15.0",
     "styled-components": "^6.1.13",
